--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -102,7 +102,8 @@ button:hover {
 }
 
 
-.loader {
+.visible {
+  display: block;
   margin: 0 auto;
   width: 32px;
   height: 32px;
@@ -112,7 +113,7 @@ button:hover {
   animation: fill 1s ease-in infinite alternate;
 }
 
-.loader::before, .loader::after {
+.visible::before, .visible::after {
   content: '';
   position: absolute;
   height: 100%;
@@ -123,7 +124,7 @@ button:hover {
   animation: fill 0.9s ease-in infinite alternate;
 }
 
-.loader::after {
+.visible::after {
   left: auto;
   right: 48px;
   animation-duration: 1.1s;
